@@ -187,7 +187,7 @@ void ipv6_install_flow_mod(void){
 	CU_ASSERT(of1x_add_match_to_entry(entry,of1x_init_ip6_src_match(value,mask)) == ROFL_SUCCESS);
 	
 	//Uninstall (specific)	
-	CU_ASSERT(of1x_remove_flow_entry_table(&sw->pipeline, 0, entry, STRICT, OF1X_PORT_ANY, OF1X_GROUP_ANY) == ROFL_SUCCESS);
+	CU_ASSERT(of1x_remove_flow_entry_table(&sw->pipeline, 0, entry, STRICT, OF1X_PORT_ANY, OF1X_GROUP_ANY) == ROFL_OF1X_FM_SUCCESS);
 	
 	//Check real size of the table
 	CU_ASSERT(sw->pipeline.tables[0].num_of_entries == 0);
@@ -238,7 +238,7 @@ void ipv6_install_flow_mod_complete(void){
 	
 
 	//Uninstall (specific)	
-	CU_ASSERT(of1x_remove_flow_entry_table(&sw->pipeline, 0, entry, STRICT, OF1X_PORT_ANY, OF1X_GROUP_ANY) == ROFL_SUCCESS);
+	CU_ASSERT(of1x_remove_flow_entry_table(&sw->pipeline, 0, entry, STRICT, OF1X_PORT_ANY, OF1X_GROUP_ANY) == ROFL_OF1X_FM_SUCCESS);
 	
 	//Check real size of the table
 	CU_ASSERT(sw->pipeline.tables[0].num_of_entries == 0);
@@ -277,7 +277,7 @@ void icmpv6_install_flow_mod_complete(void){
 	
 
 	//Uninstall (specific)	
-	CU_ASSERT(of1x_remove_flow_entry_table(&sw->pipeline, 0, entry, STRICT, OF1X_PORT_ANY, OF1X_GROUP_ANY) == ROFL_SUCCESS);
+	CU_ASSERT(of1x_remove_flow_entry_table(&sw->pipeline, 0, entry, STRICT, OF1X_PORT_ANY, OF1X_GROUP_ANY) == ROFL_OF1X_FM_SUCCESS);
 	
 	//Check real size of the table
 	CU_ASSERT(sw->pipeline.tables[0].num_of_entries == 0);
