@@ -17,6 +17,7 @@ v0.6.0
 
 [+][pipeline] Added missing support for OFPP_TABLE 
 [+][pipeline] Added NF port type extensions 
+[+][pipeline] Added more return codes (failures) 
 [+][pipeline] Added L2 (ETH_DST, VLAN) l2hash matching algorithm
 [B][pipeline] Fixed issue #40 (bug) => set cookie field in Packet-In messages based on flow entry
 [+][common] All crofsock instances run in dedicated own thread
